--- a/Dict.xaml
+++ b/Dict.xaml
@@ -2,20 +2,20 @@
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
     <Style TargetType="Button" x:Key="UpperButtons">
         <Setter Property="Margin" Value="10"/>
-        <Setter Property="Width" Value="66"/>
-        <Setter Property="Height" Value="66"/>
     </Style>
-    <Style TargetType="TextBox" x:Key="Search">
-        <Setter Property="Height" Value="25"/>
+    <Style TargetType="TextBox">
         <Setter Property="Margin" Value="10"/>
     </Style>
     <Style TargetType="TabControl">
-        <Setter Property="Margin" Value="5"/>
-    </Style>
-    <Style TargetType="TextBlock">
-        <Setter Property="Margin" Value="5"/>
-    </Style>
-    <Style TargetType="RichTextBox">
-        <Setter Property="Margin" Value="5"/>
+        <Setter Property="Margin" Value="10"/>
+    </Style>                             
+    <Style TargetType="TextBlock">       
+        <Setter Property="Margin" Value="10"/>
+    </Style>                             
+    <Style TargetType="RichTextBox">     
+        <Setter Property="Margin" Value="10"/>
+    </Style>                             
+    <Style TargetType="PasswordBox">     
+        <Setter Property="Margin" Value="10"/>
     </Style>
 </ResourceDictionary>
